<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contenedor_fragment_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.oloralibro.activities.ActivityIniciarSesion">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@drawable/officiallogoapp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margen_titulos"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:focusable="true"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="#000000">

            <EditText
                android:id="@+id/contraseña"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:focusable="true"
                android:hint="@string/contraseña_hint"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/botonIniciarSesion"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bordes_redondeados"
            android:text="@string/txtBoton_IniciarSesion"
            android:textColor="@color/letra_blanco"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/botonRegistrarse"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bordes_redondeados"
            android:text="@string/txtBoton_Registrarse"
            android:textColor="@color/letra_blanco"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="@dimen/margen_titulos"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margen_titulos"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBoxRecordar"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/login_recuerdame"
                android:textStyle="bold"
                android:textColor="@color/Letra_verde"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:gravity="right|end"
                android:text="@string/login_olvidadoContraseña"
                android:textStyle="bold"
                android:textColor="@color/Letra_verde"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>